force-app/main/default/objects/AWS_IAM_UserCredentials__c/AWS_IAM_UserCredentials__c.object-meta.xml
<CustomObject>
    <label>Amazon S3 Credential</label>
    <nameField>
        <label>Amazon Credentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amazon S3 Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>