force-app/main/default/objects/AWS_IAM_UserCredentials__c/fields/Access_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Key_Id__c</fullName>
    <label>Access Key Id</label>
    <length>21</length>
    <type>Text</type>
</CustomField>