force-app/main/default/objects/AWS_IAM_UserCredentials__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>US Standard=us-east-1
US (Oregon)=us-west-2
US (N.California)=us-west-1
EU (Ireland)=eu-west-1
EU (Frankfurt)=eu-central-1
Asia (Singapore)=ap-southeast-1
Asia (Sydney)=ap-southeast-2
Asia (Tokyo)=ap-northeast-1
South America(Sao Paulo)=sa-east-1</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eu-west-1</fullName>
            </value>
            <value>
                <fullName>us-east-1</fullName>
            </value>
            <value>
                <fullName>us-west-2</fullName>
            </value>
            <value>
                <fullName>us-west-1</fullName>
            </value>
            <value>
                <fullName>eu-central-1</fullName>
            </value>
            <value>
                <fullName>ap-southeast-1</fullName>
            </value>
            <value>
                <fullName>ap-southeast-2</fullName>
            </value>
            <value>
                <fullName>ap-northeast-1</fullName>
            </value>
            <value>
                <fullName>sa-east-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>