force-app/main/default/objects/AWS_IAM_UserCredentials__c/fields/Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Access_Key__c</fullName>
    <label>Secret Access Key</label>
    <length>41</length>
    <type>Text</type>
</CustomField>